--- a/2017/01.md
+++ b/2017/01.md
@@ -1,5 +1,7 @@
 # 2017.01
 
+[TOC]
+
 ## 1. Swift中lazy作惰性求值
 
 函数式编程中有惰性求值的概念，即一次计算在真正需要时才执行，尽可能推迟求解表达式。
@@ -321,7 +323,7 @@ class HandlerCaller: NSObject {
 
 另外，对`C API`的处理也是相同的。
 
-### 参考
+参考
 
 1. [Make non-escaping closures the default](https://github.com/apple/swift-evolution/blob/master/proposals/0103-make-noescape-default.md)
 2. [Add @noescape to public library API](https://github.com/apple/swift-evolution/blob/master/proposals/0012-add-noescape-to-public-library-api.md)
@@ -423,7 +425,7 @@ Quartz在填充区域时有两套规则：`非零缠绕数规则(nonzero winding
 
 填充规则除了这两种，还有`Positive`和`Negative`，有兴趣的可以研究一下。 
 
-### 参考
+参考
 
 1. [Nonzero-rule](https://en.wikipedia.org/wiki/Nonzero-rule)
 2. [Even–odd rule](https://en.wikipedia.org/wiki/Even%E2%80%93odd_rule)
@@ -581,7 +583,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 #endif
 ```
 
-### 参考
+参考
 
 1. [Attributes in Clang](http://clang.llvm.org/docs/AttributeReference.html#objc-requires-super)
 
@@ -595,7 +597,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/16-1-2.png?raw=true)
 
-### 参考
+参考
 
 1. [Clang 5 documentation](http://clang.llvm.org/docs/AttributeReference.html#objc-runtime-name)
 2. [Clang Attributes 黑魔法小记](http://blog.sunnyxx.com/2016/05/14/clang-attributes/)
@@ -614,7 +616,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/17-1-3.png?raw=true)
 
-### 参考
+参考
 
 1. [深入理解Tagged Pointer](http://www.infoq.com/cn/articles/deep-understanding-of-tagged-pointer)
 2. [WWDC 2013 Advanced in Objective-C](https://developer.apple.com/videos/play/wwdc2013/404/)
@@ -669,7 +671,7 @@ class ViewController: UIViewController {
 }
 ```
 
-### 参考
+参考
 
 [Swift: Selector Syntax Sugar](https://medium.com/swift-programming/swift-selector-syntax-sugar-81c8a8b10df3#.md6860mmq)
 
@@ -712,7 +714,7 @@ let chris = Person(firstName: "Chris")
 chris.value(forKeyPath: #keyPath(Person.firstName))
 ```
 
-### 参考
+参考
 
 1. [Referencing Objective-C key-paths](https://github.com/apple/swift-evolution/blob/master/proposals/0062-objc-keypaths.md)
 
@@ -726,7 +728,7 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 2. `var`经常被混淆，以使值类型具有引用语义；
 3. 函数参数通常是不可重用的
 
-### 参考
+参考
 
 1. [Removing var from Function Parameters](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)
 
@@ -749,7 +751,7 @@ print(description[AnyHashable(Set(["a", "b"]))]!)   // a set of strings
 
 早先，在`ObjC`与`Swift`混合编程中，`ObjC`的`NSDictionary`导入到`Swift`时，是转换成`[NSObject: AnyObject]`类型。使用`NSObject`作为`key`的类型，因为`NSObject`是最接近于`AnyObject`且实现了`Hashable`的类型。不过`Swift`希望在标准库中限制`AnyObject`的使用，而更多的使用`Any`，所以加入了`AnyHashable`类型。
 
-### 参考
+参考
 
 1. [Add AnyHashable to the standard library](https://github.com/apple/swift-evolution/blob/master/proposals/0131-anyhashable.md)
 
