--- a/2017/01.md
+++ b/2017/01.md
@@ -1,6 +1,29 @@
 # 2017.01
 
-[TOC]
+## 目录
+
+* [1. Swift中lazy作惰性求值](#1. Swift中lazy作惰性求值)
+* [2. Swift stride操作](#2. Swift stride操作)
+* [3. static方法与class方法的区别](#3. static方法与class方法的区别)
+* [4. Swift中的函数值](#4. Swift中的函数值)
+* [5. Array.contains操作](#5. Array.contains操作)
+* [6. NSRecursiveLock递归锁的使用](#6. NSRecursiveLock递归锁的使用)
+* [7. __attribute__((noescape))属性](#7. __attribute__((noescape))属性)
+* [8. Swift中的escaping closure](#8. Swift中的escaping closure)
+* [9. Traits](#9. Traits)
+* [10. Injection代码注入](#10. Injection代码注入)
+* [11. 路径填充规则](#11. 路径填充规则)
+* [12. filter与flatMap过滤nil](#12. filter与flatMap过滤nil)
+* [13. NSRecursiveLock.lock(before:)](#13. NSRecursiveLock.lock(before:))
+* [14. Swift 3移除Optional类型的比较操作](#14. Swift 3移除Optional类型的比较操作)
+* [15. __attribute__((objc_requires_super))](#15. __attribute__((objc_requires_super)))
+* [16. __attribute__((objc_runtime_name))](#16. __attribute__((objc_runtime_name)))
+* [17. Tagged Pointer](#17. Tagged Pointer)
+* [18. Extension Selector](#18. Extension Selector)
+* [19. typealias泛型闭包](#19. typealias泛型闭包)
+* [20. Swift 3 #keyPath](#20. Swift 3 #keyPath)
+* [21. Swift 3移除var关键字](#21. Swift 3移除var关键字)
+* [22. Swift 3中的AnyHashable](#22. Swift 3中的AnyHashable)
 
 ## 1. Swift中lazy作惰性求值
 
