--- a/2017/01.md
+++ b/2017/01.md
@@ -2,7 +2,7 @@
 
 ## 目录
 
-* [1. Swift中lazy作惰性求值](#1. Swift中lazy作惰性求值)
+* [1.Swift中lazy作惰性求值](#1.Swift中lazy作惰性求值)
 * [2. Swift stride操作](#2. Swift stride操作)
 * [3. static方法与class方法的区别](#3. static方法与class方法的区别)
 * [4. Swift中的函数值](#4. Swift中的函数值)
@@ -25,7 +25,8 @@
 * [21. Swift 3移除var关键字](#21. Swift 3移除var关键字)
 * [22. Swift 3中的AnyHashable](#22. Swift 3中的AnyHashable)
 
-## 1. Swift中lazy作惰性求值
+1.Swift中lazy作惰性求值
+------------------
 
 函数式编程中有惰性求值的概念，即一次计算在真正需要时才执行，尽可能推迟求解表达式。
 
