--- a/2017/01.md
+++ b/2017/01.md
@@ -3,27 +3,27 @@
 ## 目录
 
 * [1.Swift中lazy作惰性求值](#1.Swift中lazy作惰性求值)
-* [2.Swift stride操作](#2.Swift stride操作)
+* [2.Swift的stride操作](#2.Swift的stride操作)
 * [3.static方法与class方法的区别](#3.static方法与class方法的区别)
 * [4.Swift中的函数值](#4.Swift中的函数值)
 * [5.Array.contains操作](#5.Array.contains操作)
 * [6.NSRecursiveLock递归锁的使用](#6.NSRecursiveLock递归锁的使用)
 * [7.__attribute__((noescape))属性](#7.__attribute__((noescape))属性)
-* [8.Swift中的escaping closure](#8.Swift中的escaping closure)
-* [9.Traits](#9.Traits)
+* [8.Swift中的escaping_closure](#8.Swift中的escaping_closure)
+* [Traits](#Traits)
 * [10.Injection代码注入](#10.Injection代码注入)
 * [11.路径填充规则](#11.路径填充规则)
 * [12.filter与flatMap过滤nil](#12.filter与flatMap过滤nil)
 * [13.NSRecursiveLock.lock(before:)](#13.NSRecursiveLock.lock(before:))
-* [14.Swift 3移除Optional类型的比较操作](#14.Swift 3移除Optional类型的比较操作)
+* [14.Swift3移除Optional类型的比较操作](#14.Swift3移除Optional类型的比较操作)
 * [15.__attribute__((objc_requires_super))](#15.__attribute__((objc_requires_super)))
 * [16.__attribute__((objc_runtime_name))](#16.__attribute__((objc_runtime_name)))
-* [17.Tagged Pointer](#17.Tagged Pointer)
-* [18.Extension Selector](#18.Extension Selector)
+* [17.Tagged_Pointer](#17.Tagged_Pointer)
+* [18.Extension_Selector](#18.Extension_Selector)
 * [19.typealias泛型闭包](#19.typealias泛型闭包)
-* [20.Swift 3 #keyPath](#20.Swift 3 #keyPath)
-* [21.Swift 3移除var关键字](#21.Swift 3移除var关键字)
-* [22.Swift 3中的AnyHashable](#22.Swift 3中的AnyHashable)
+* [20.Swift3的#keyPath](#20.Swift3的#keyPath)
+* [21.Swift3移除var关键字](#21.Swift3移除var关键字)
+* [22.Swift3中的AnyHashable](#22.Swift3中的AnyHashable)
 
 1.Swift中lazy作惰性求值
 ------------------
@@ -62,7 +62,7 @@ print(element)
 
 我们在Playground中可以看到，整个计算中实际只执行了一次*2操作。
 
-2.Swift stride操作
+2.Swift的stride操作
 ----------
 
 在Swift中，如果我们想创建一个一定步长的数组，可以如下代码操作：
@@ -358,7 +358,7 @@ class HandlerCaller: NSObject {
 1. [Make non-escaping closures the default](https://github.com/apple/swift-evolution/blob/master/proposals/0103-make-noescape-default.md)
 2. [Add @noescape to public library API](https://github.com/apple/swift-evolution/blob/master/proposals/0012-add-noescape-to-public-library-api.md)
 
-8.Swift中的escaping closure
+8.Swift中的escaping_closure
 ----------
 
 在Swift中使用`@escaping`来修饰一个逃逸闭包(`Escaping Closures`)，即闭包作为参数传到一个函数中时，这个闭包可以不在函数中调用，而在函数返回之后的某个时间再调用。如可以在函数中将闭包赋值给一个类的成员变量，或者保存在一个数组中，以备后续异步调用。这类闭包参数需要使用`@escaping`来修饰，否则会报错，如下代码所示：
@@ -389,7 +389,7 @@ class A {
 }
 ```
 
-9.Traits
+Traits
 ----------
 
 `Traits`是一个可以实现实时更新代码，而不需要重新运行程序就可以看到效果的库，效果如下图所示，源码地址在[这里](https://github.com/krzysztofzablocki/Traits)。
@@ -548,7 +548,7 @@ DispatchQueue.global().async {
 
 当然这种情况下会失败，其输出如下所示。如果将`lock(before:)`中的时间设置长一点，则会打印出"lock befor date"。
 
-14.Swift 3移除Optional类型的比较操作
+14.Swift3移除Optional类型的比较操作
 ----------
 
 `Swift 3`已经移除了`Optional`类型的比较操作，这在[Swift evolution SE-0121: Remove Optional Comparison Operators](https://github.com/apple/swift-evolution/blob/master/proposals/0121-remove-optional-comparison-operators.md)这条中明确了这一点。
@@ -641,7 +641,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 1. [Clang 5 documentation](http://clang.llvm.org/docs/AttributeReference.html#objc-runtime-name)
 2. [Clang Attributes 黑魔法小记](http://blog.sunnyxx.com/2016/05/14/clang-attributes/)
 
-17.Tagged Pointer
+17.Tagged_Pointer
 ----------
 
 苹果在64位ARM架构下，对`NSNumber`等小对象对象的存储做了优化，即使用`Tagged Pointer`技术。通过使用这种技术，`NSNumber`指针变量指向的值不再是单独存储在一块内存中，而是对指针本身做了特殊处理，如下图代码所示。
@@ -661,7 +661,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 1. [深入理解Tagged Pointer](http://www.infoq.com/cn/articles/deep-understanding-of-tagged-pointer)
 2. [WWDC 2013 Advanced in Objective-C](https://developer.apple.com/videos/play/wwdc2013/404/)
 
-18.Extension Selector
+18.Extension_Selector
 ----------
 
 在`Swift`中，我们可以使用`#selector`设置`target-action`模式中的`action`操作，如下代码所示：
@@ -734,7 +734,7 @@ compare(number1: 10, number2: 20) {
 }
 ```
 
-20.Swift 3 #keyPath
+20.Swift3的#keyPath
 ----------
 
 在`Objective-C/Swift`中使用`KVC`或`KVO`总是需要格外小心，因为对于`key`或`keyPath`，我们使用的是字符串字面量来处理。这样在编译期无法检测我们的输入是否正确，或许我们会因为一时大意，多写了或少写了一个字符，或拼错了单词。而这个错误只能在运行时，程序崩溃时才能发现，很不爽的吧。
@@ -761,7 +761,7 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 
 1. [Referencing Objective-C key-paths](https://github.com/apple/swift-evolution/blob/master/proposals/0062-objc-keypaths.md)
 
-21.Swift 3移除var关键字
+21.Swift3移除var关键字
 ----------
 
 `Swift 3`中移除了函数参数中的`var`关键字，[swift proposals SE-0003](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)中的观点是`var`标记的参数只是本地复本会变化，不会回传给原始值，因此调用者并不会知道参数值的改变，实际上没有太大的实用性。
@@ -776,7 +776,7 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 
 1. [Removing var from Function Parameters](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)
 
-22.Swift 3中的AnyHashable
+22.Swift3中的AnyHashable
 ----------
 
 在`Swift 3`的标准库中添加了`AnyHashable`这一新类型，其用途是在需要`Hash`值的集合中，可以混合使用多种`Hashable`类型。例如，字典的`key`值，其要求是`Hashable`类型，如果希望`key`值是任意实现了`Hashable`协议的类型，则在声明字典时，可以使用`AnyHashable`作为`key`的类型，如下代码所示：
