--- a/2017/01.md
+++ b/2017/01.md
@@ -1,32 +1,7 @@
 # 2017.01
 
-## 目录
 
-* [1.Swift中lazy作惰性求值](#1.Swift中lazy作惰性求值)
-* [2.Swift的stride操作](#2.Swift的stride操作)
-* [3.static方法与class方法的区别](#3.static方法与class方法的区别)
-* [4.Swift中的函数值](#4.Swift中的函数值)
-* [5.Array.contains操作](#5.Array.contains操作)
-* [6.NSRecursiveLock递归锁的使用](#6.NSRecursiveLock递归锁的使用)
-* [7.__attribute__((noescape))属性](#7.__attribute__((noescape))属性)
-* [8.Swift中的escaping_closure](#8.Swift中的escaping_closure)
-* [Traits](#Traits)
-* [10.Injection代码注入](#10.Injection代码注入)
-* [11.路径填充规则](#11.路径填充规则)
-* [12.filter与flatMap过滤nil](#12.filter与flatMap过滤nil)
-* [13.NSRecursiveLock.lock(before:)](#13.NSRecursiveLock.lock(before:))
-* [14.Swift3移除Optional类型的比较操作](#14.Swift3移除Optional类型的比较操作)
-* [15.__attribute__((objc_requires_super))](#15.__attribute__((objc_requires_super)))
-* [16.__attribute__((objc_runtime_name))](#16.__attribute__((objc_runtime_name)))
-* [17.Tagged_Pointer](#17.Tagged_Pointer)
-* [18.Extension_Selector](#18.Extension_Selector)
-* [19.typealias泛型闭包](#19.typealias泛型闭包)
-* [20.Swift3的#keyPath](#20.Swift3的#keyPath)
-* [21.Swift3移除var关键字](#21.Swift3移除var关键字)
-* [22.Swift3中的AnyHashable](#22.Swift3中的AnyHashable)
-
-1.Swift中lazy作惰性求值
-------------------
+## 1. Swift中lazy作惰性求值
 
 函数式编程中有惰性求值的概念，即一次计算在真正需要时才执行，尽可能推迟求解表达式。
 
@@ -62,8 +37,7 @@ print(element)
 
 我们在Playground中可以看到，整个计算中实际只执行了一次*2操作。
 
-2.Swift的stride操作
-----------
+## 2. Swift的stride操作
 
 在Swift中，如果我们想创建一个一定步长的数组，可以如下代码操作：
 
@@ -93,8 +67,7 @@ let array = stride(from: 0, to: 3, by: 0.3).map {
 
 `stride`函数与`map`配合起来可以做一些有意思的事情。
 
-3.static方法与class方法的区别
-----------
+## 3. static方法与class方法的区别
 
 在Swift中，`static`和`class`这两个关键字都可以修饰类的方法，以表明这个方法是一个类方法。不过这两者稍微有一些区别：`class`修饰的类方法可以被子类重写，而`static`修饰的类方法则不能。如下代码所示：
 
@@ -125,8 +98,7 @@ B.method1()
 B.method2()
 ```
 
-4.Swift中的函数值
-----------
+## 4. Swift中的函数值
 
 我们知道在Swift中，函数是一等公民，即函数也是一种类型，可充当参数、返回值等角色，当然也可以定义函数类型的常量/变量。利用这个特性，在某些场景下可以简化我们的代码，如下代码所示：
 
@@ -138,8 +110,7 @@ setInt(10, "key")
 print(getInt("key"))
 ```
 
-5.Array.contains操作
-----------
+## 5. Array.contains操作
 
 Swift中判断一个`Array`中是否包含某个元素，我们可以使用`contains`方法，如下代码所示：
 
@@ -196,8 +167,7 @@ array.contains { (element) -> Bool in
 }
 ```
 
-6.NSRecursiveLock递归锁的使用
-----------
+## 6. NSRecursiveLock递归锁的使用
 
 `NSRecursiveLock`定义的是一个递归锁，这个锁可以被同一线程多次请求，而不会引起死锁。它主要是用在循环或递归操作中。我们先来看下面代码示例：
 
@@ -281,8 +251,7 @@ DispatchQueue.global().async {
 // end
 ```
 
-7.`__attribute__((noescape))属性`
-----------
+## 7. \_\_attribute\_\_((noescape))属性
 
 在Cocoa中，大部分API的`closure/block`参数都是逃逸的(`escaping`)，因此，在swift中调用Objective-C的API时，编译器会自动在Objective-C API中的`closure/block`参数前面添加`@escaping`。
 
@@ -358,8 +327,7 @@ class HandlerCaller: NSObject {
 1. [Make non-escaping closures the default](https://github.com/apple/swift-evolution/blob/master/proposals/0103-make-noescape-default.md)
 2. [Add @noescape to public library API](https://github.com/apple/swift-evolution/blob/master/proposals/0012-add-noescape-to-public-library-api.md)
 
-8.Swift中的escaping_closure
-----------
+## 8. Swift中的escaping closure
 
 在Swift中使用`@escaping`来修饰一个逃逸闭包(`Escaping Closures`)，即闭包作为参数传到一个函数中时，这个闭包可以不在函数中调用，而在函数返回之后的某个时间再调用。如可以在函数中将闭包赋值给一个类的成员变量，或者保存在一个数组中，以备后续异步调用。这类闭包参数需要使用`@escaping`来修饰，否则会报错，如下代码所示：
 
@@ -389,8 +357,7 @@ class A {
 }
 ```
 
-Traits
-----------
+## 9. Traits
 
 `Traits`是一个可以实现实时更新代码，而不需要重新运行程序就可以看到效果的库，效果如下图所示，源码地址在[这里](https://github.com/krzysztofzablocki/Traits)。
 
@@ -408,8 +375,7 @@ Traits
 	
 	![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/09-1-3.png?raw=true)
 
-10.Injection代码注入
-----------
+## 10. Injection代码注入
 
 `Injection`是johnno开发的一个`Xcode`插件，允许我们将代码实现更快注入到模拟器运行的程序或macOS程序。原先可以通过`Alcatraz`安装到Xcode中，不过现在是独立的App了。可以在[这里](http://johnholdsworth.com/Injection.app.zip)下载安装。启动后会出现在屏幕顶部的工具栏中，如下图所示。
 
@@ -432,8 +398,7 @@ Traits
 [文档](https://johntmcintosh.com/blog/2016/10/03/code-injection-ios)
 
 
-11.路径填充规则
-----------
+## 11. 路径填充规则
 
 Quartz在填充区域时有两套规则：`非零缠绕数规则(nonzero windingnumber rule)`和`偶数-奇数规则(Even-odd)`。
 
@@ -466,8 +431,7 @@ Quartz在填充区域时有两套规则：`非零缠绕数规则(nonzero winding
 3. [Quartz 2D编程指南之三：路径(Path)](http://southpeak.github.io/2014/11/16/quartz2d-3/)
 4. [PolyFillType](http://www.angusj.com/delphi/clipper/documentation/Docs/Units/ClipperLib/Types/PolyFillType.htm)
 
-12.filter与flatMap过滤nil
-----------
+## 12. filter与flatMap过滤nil
 
 使用高阶函数过滤一个数组中的nil可以有两种方法：`filter`和`flatMap`。
 
@@ -496,8 +460,7 @@ print(result)		// [1, 2, 3, 5, 9]
 
 从输出可以看出，`filter`返回的仍然是一个`Optional`数组，而`flatMap`返回的是一个非`Optional`数组。一般推荐使用第二种方法。
 
-13.NSRecursiveLock.lock(before:)
-----------
+## 13. NSRecursiveLock.lock(before:)
 
 `NSRecursiveLock`递归锁提供了一个方法`lock(before:)`，用于在多线程情况下，去尝试请求一个递归锁，然后根据返回的布尔值，来做相应的处理。如下代码所示，是一个正常的递归锁调用过程：
 
@@ -548,8 +511,7 @@ DispatchQueue.global().async {
 
 当然这种情况下会失败，其输出如下所示。如果将`lock(before:)`中的时间设置长一点，则会打印出"lock befor date"。
 
-14.Swift3移除Optional类型的比较操作
-----------
+## 14. Swift3移除Optional类型的比较操作
 
 `Swift 3`已经移除了`Optional`类型的比较操作，这在[Swift evolution SE-0121: Remove Optional Comparison Operators](https://github.com/apple/swift-evolution/blob/master/proposals/0121-remove-optional-comparison-operators.md)这条中明确了这一点。
 
@@ -575,8 +537,7 @@ dic1["middle"] < dic2["middle"]		// value of optional type 'String?' not unwrapp
 
 当然在SE-0121中也说了，等泛型更加成熟后，不排除会将这一特性再添加回来。
 
-15.`__attribute__((objc_requires_super))`
-----------
+## 15. \_\_attribute\_\_((objc_requires_super))
 
 Objective-C允许子类可以重写父类的方法。如果我们希望子类方法重写父类方法时必须使用super来调用父类的对应方法，则可以在方法声明后面添加clang的编译属性`objc_requires_super`。添加这一属性后，如果子类没有调用父类方法，则会给出一个编译警告，如下代码所示：
 
@@ -625,8 +586,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 1. [Attributes in Clang](http://clang.llvm.org/docs/AttributeReference.html#objc-requires-super)
 
-16.`__attribute__((objc_runtime_name))`
-----------
+## 16. \_\_attribute\_\_((objc_runtime_name))
 
 `Objective-C`在默认情况下是将类或协议的名字作为元数据名称(`metadata name`)，即如果我们打印一个对象的`class`方法，输出就是对象所属类的类名，如下图所示。
 
@@ -641,8 +601,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 1. [Clang 5 documentation](http://clang.llvm.org/docs/AttributeReference.html#objc-runtime-name)
 2. [Clang Attributes 黑魔法小记](http://blog.sunnyxx.com/2016/05/14/clang-attributes/)
 
-17.Tagged_Pointer
-----------
+## 17. Tagged Pointer
 
 苹果在64位ARM架构下，对`NSNumber`等小对象对象的存储做了优化，即使用`Tagged Pointer`技术。通过使用这种技术，`NSNumber`指针变量指向的值不再是单独存储在一块内存中，而是对指针本身做了特殊处理，如下图代码所示。
 
@@ -661,8 +620,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 1. [深入理解Tagged Pointer](http://www.infoq.com/cn/articles/deep-understanding-of-tagged-pointer)
 2. [WWDC 2013 Advanced in Objective-C](https://developer.apple.com/videos/play/wwdc2013/404/)
 
-18.Extension_Selector
-----------
+## 18. Extension Selector
 
 在`Swift`中，我们可以使用`#selector`设置`target-action`模式中的`action`操作，如下代码所示：
 
@@ -717,8 +675,7 @@ class ViewController: UIViewController {
 [Swift: Selector Syntax Sugar](https://medium.com/swift-programming/swift-selector-syntax-sugar-81c8a8b10df3#.md6860mmq)
 
 
-19.typealias泛型闭包
-----------
+## 19. typealias泛型闭包
 
 在`Swift`中我们可以用`typealias`来为已经存在的类型重新定义名字的,通过命名可以使代码变得更加清晰。当然也可以给闭包类型定义一个新名字，给带有泛型的闭包重新定义名字的方式如下代码所示：
 
@@ -734,8 +691,7 @@ compare(number1: 10, number2: 20) {
 }
 ```
 
-20.Swift3的#keyPath
-----------
+## 20. Swift 3的#keyPath
 
 在`Objective-C/Swift`中使用`KVC`或`KVO`总是需要格外小心，因为对于`key`或`keyPath`，我们使用的是字符串字面量来处理。这样在编译期无法检测我们的输入是否正确，或许我们会因为一时大意，多写了或少写了一个字符，或拼错了单词。而这个错误只能在运行时，程序崩溃时才能发现，很不爽的吧。
 
@@ -761,8 +717,7 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 
 1. [Referencing Objective-C key-paths](https://github.com/apple/swift-evolution/blob/master/proposals/0062-objc-keypaths.md)
 
-21.Swift3移除var关键字
-----------
+## 21. Swift 3移除var关键字
 
 `Swift 3`中移除了函数参数中的`var`关键字，[swift proposals SE-0003](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)中的观点是`var`标记的参数只是本地复本会变化，不会回传给原始值，因此调用者并不会知道参数值的改变，实际上没有太大的实用性。
 
@@ -776,8 +731,7 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 
 1. [Removing var from Function Parameters](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)
 
-22.Swift3中的AnyHashable
-----------
+## 22. Swift 3中的AnyHashable
 
 在`Swift 3`的标准库中添加了`AnyHashable`这一新类型，其用途是在需要`Hash`值的集合中，可以混合使用多种`Hashable`类型。例如，字典的`key`值，其要求是`Hashable`类型，如果希望`key`值是任意实现了`Hashable`协议的类型，则在声明字典时，可以使用`AnyHashable`作为`key`的类型，如下代码所示：
 
