--- a/2017/10.md
+++ b/2017/10.md
@@ -33,7 +33,7 @@
 
 不过需要注意的是只有在程序入口是用Swift来写的应用中(`@UIApplicationMain/@NSApplicationMain`)才有效。
 
-### 参考
+参考
 
 [Xcode 9.1 Improves Display of Fatal Errors](https://swift.org/blog/xcode-9-1-improves-display-of-fatal-errors/?utm_campaign=This%2BWeek%2Bin%2BSwift&utm_medium=email&utm_source=This_Week_in_Swift_146)
 
@@ -170,9 +170,7 @@ export const getImageSource = iconSet.getImageSource;
 
 最主要的就是createIconSet函数，它接受三个参数：字形映射表、字体名、字体文件名。
 
-首先我们需要制作一个字形映射表，这是一个json文件，其内容如代码清单27-1-2所示：
-
-**代码清单27-1-2**
+首先我们需要制作一个字形映射表，这是一个json文件，其内容如下代码所示：
 
 ```javascript
 {
@@ -184,9 +182,7 @@ export const getImageSource = iconSet.getImageSource;
 
 key是我们可以在代码中直接使用的字符串，value是Unicode码对应的10进制数字，其中Unicode码可以在iconfont.cn上查看(实际就是就`&#xe665;`串中有`e665`)。
 
-然后我们创建一个js文件，参考Zocial.js，依葫芦画瓢，如代码清单27-1-3所示：
-
-**代码清单27-1-3**
+然后我们创建一个js文件，参考Zocial.js，依葫芦画瓢，如下代码所示：
 
 ```javascript
 import createIconSet from 'react-native-vector-icons/lib/create-icon-set';
@@ -204,9 +200,7 @@ export const ToolbarAndroid = iconSet.ToolbarAndroid;
 export const getImageSource = iconSet.getImageSource;
 ```
 
-在工程中，我们就可以直接使用这个自定义图标库了，如代码清单27-1-4所示：
-
-**代码清单27-1-4**
+在工程中，我们就可以直接使用这个自定义图标库了，如下代码所示：
 
 ```javascript
 import Icon from './assets/fonts/iconfont';
@@ -218,7 +212,7 @@ const setTabBarIcon = () => ({tintColor}) => {
 
 比使用Unicode直观多了。
 
-### 参考
+参考
 
 1. [Github react-native-vector-icons](https://github.com/oblador/react-native-vector-icons)
 2. [React Native与Iconfont](https://github.com/MrErHu/blog/issues/15)
