--- a/2017/目录.md
+++ b/2017/目录.md
@@ -75,5 +75,5 @@
 * [6. 如何找出国际化文件(xxxx.strings)中未国际化的文件【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/10.md) 
 * [7. Extract Function/Extract Method](https://github.com/southpeak/iOS-tech-set/blob/master/2017/10.md)
 * [8. React Native中自定义iconfont图标库](https://github.com/southpeak/iOS-tech-set/blob/master/2017/10.md)
-* [9. 判断是否在主队列运行](https://github.com/southpeak/iOS-tech-set/blob/master/2017/10.md)
+* [9. 判断是否在主队列运行](https://github.com/southpeak/iOS-tech-set/blob/master/2017/10.md#判断是否在主队列运行)
 
