--- a/2017/10.md
+++ b/2017/10.md
@@ -1,6 +1,7 @@
 # 2017.10
 
-## 1. 查找未国际化的文字
+查找未国际化的文字
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -14,7 +15,8 @@
 2. 直接在脚本所在的目录下，执行 `python unLocalizable.py`，这里的 `unLocalizable.py` 为脚本文件名。你可以在[这里](https://github.com/lefex/TCZLocalizableTool/blob/master/LocalToos/TCZLocalizable/unLocalizable.py)找到脚本文件。
 3. `BLACKDIRLIST` 你可以过滤掉和国际化无关的文件，比如某些第三方库。
 
-## 2. Xcode 9.1对崩溃提示的改进
+Xcode 9.1对崩溃提示的改进
+----------
 
 `Xcode 9.1`改进了Swift程序崩溃时的错误提示信息：在`debug`模式下运行程序，崩溃时将在编辑区的崩溃位置显示崩溃的原因，如下图所示：
 
@@ -37,7 +39,8 @@
 
 [Xcode 9.1 Improves Display of Fatal Errors](https://swift.org/blog/xcode-9-1-improves-display-of-fatal-errors/?utm_campaign=This%2BWeek%2Bin%2BSwift&utm_medium=email&utm_source=This_Week_in_Swift_146)
 
-## 3. 删除 iOS 项目中未使用的图片
+删除iOS项目中未使用的图片
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -57,7 +60,8 @@
 
 更好的阅读体验，请移步[更人性化的找出 iOS 中未使用的图](http://www.jianshu.com/p/dca77c25bf5d)
 
-## 4. Dictionary的mapValue(_:)方法
+Dictionary的mapValue(_:)方法
+----------
 
 Swift 4中的Dictionary字典新增了一个mapValue(_:)方法，来转换字典的值，同时保留key。如下代码所示：
 
@@ -76,7 +80,8 @@ print(result)
 
 其中original和result有相同的key，只是值不同，所以它们有相同的内部布局，不需要重新计算hash值，因此这种方式创建字典会比重新构建一个字典更快。
 
-## 5. 如何1秒找出国际化文件(en.lproj/Localizable.strings)语法错误
+如何1秒找出国际化文件(en.lproj/Localizable.strings)语法错误
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -92,7 +97,8 @@ print(result)
 /en.lproj/Localizable.strings:line[11] : "HOM_Lefe" = "wsy“;
 ```
 
-## 6. 如何找出国际化文件(xxxx.strings)中未国际化的文件
+如何找出国际化文件(xxxx.strings)中未国际化的文件
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -130,7 +136,8 @@ GRB_groupBuy
 
 可以从[这里](https://github.com/lefex/TCZLocalizableTool)找到这些脚本源码。
 
-## 7. Extract Function/Extract Method
+Extract Function/Extract Method
+----------
 
 当我们写代码写得飞起的时候，很可能在一个函数/方法里面堆积大量代码。当然，从美学的角度来讲，我们更希望写一些小而职责单一的函数/方法，所以这时候可以考虑重构。
 
@@ -147,7 +154,8 @@ Xcode为我们提供了一个简便的方法：`Extract Function/Extract Method`
 而且这个操作可以识别新方法需要哪些参数，是不是很方便？
 
 
-## 8. React Native中自定义iconfont图标库
+React Native中自定义iconfont图标库
+----------
 
 接上一条。
 
@@ -217,7 +225,8 @@ const setTabBarIcon = () => ({tintColor}) => {
 1. [Github react-native-vector-icons](https://github.com/oblador/react-native-vector-icons)
 2. [React Native与Iconfont](https://github.com/MrErHu/blog/issues/15)
 
-## 10-判断是否在主队列运行
+判断是否在主队列运行
+----------
 
 在iOS中，如果我们要判断代码是否运行在主线程，可以直接使用`NSThread.isMainThread()`方法。但如果要判断是否运行在主队列(main queue)呢？
 
