--- a/2017/02.md
+++ b/2017/02.md
@@ -1,6 +1,7 @@
 # 2017.02
 
-## 1. 查看一个对象的类型是否为Optional
+查看一个对象的类型是否为Optional
+----------
 
 在`Swift`中，如果想在运行时判断一个对象的类型是不是可选类型，则可以使用`Mirror`，如下代码所示，所有的可选类型都将返回`optional`。
 
@@ -47,7 +48,8 @@ let str: String = "30"
 Mirror(reflecting: str).displayStyle		// nil
 ```
 
-## 2. SwiftLint
+SwiftLint
+----------
 
 `realm`开源了一套`Swift`代码规范检测工具[SwiftLint](https://github.com/realm/SwiftLint)，它可以对代码做静态分析，以确定代码是否遵循所定制的规范(目前主要基于[Github的编码规范](https://github.com/github/swift-style-guide))。
 
@@ -57,7 +59,8 @@ SwiftLint目前有70+条[规则](https://github.com/realm/SwiftLint/blob/master/
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/02/04-1-1.png?raw=true)
 
-## 3. Swift自定义操作符
+Swift自定义操作符
+----------
 
 在`Swift`中，自定义操作符就是简单的二步：首先在全局使用`operator`关键字来声明操作符，同时用`prefix`、`infix`或`postfix`来声明操作符的位置；然后在所需要的类/结构体中实现操作符。如下代码所示：
 
@@ -111,7 +114,8 @@ vector.y		// 30.0
 1. [The Swift Programming Language (Swift 4) -- Advanced Operators](https://developer.apple.com/library/content/documentation/Swift/Conceptual/Swift_Programming_Language/AdvancedOperators.html#//apple_ref/doc/uid/TP40014097-CH27-ID28)
 2. [The Swift Programming Language (Swift 4) -- Lexical Structure](https://developer.apple.com/library/content/documentation/Swift/Conceptual/Swift_Programming_Language/LexicalStructure.html#//apple_ref/doc/uid/TP40014097-CH30-ID418)
 
-## 4. 自定义操作符中的.
+自定义操作符中的.
+----------
 
 在自定义操作符时，可以以dot(.)开头，这种情况下，操作符后面还可以包含其它的dot(.)，如下代码所示：
 
@@ -148,7 +152,8 @@ infix operator +.+		// error: operator with postfix spacing cannot start a subex
 
 1. [The Swift Programming Language (Swift 4) -- Lexical Structure](https://developer.apple.com/library/content/documentation/Swift/Conceptual/Swift_Programming_Language/LexicalStructure.html#//apple_ref/doc/uid/TP40014097-CH30-ID418)
 
-## 5. Swift打印对象的地址
+Swift打印对象的地址
+----------
 
 在`Swift`中，我们可以使用`withUnsafePointer(to:_:)`函数来获取一个变量的指针，如下代码所示：
 
@@ -202,7 +207,8 @@ printPointer(ptr: &obj)
 
 1. [withUnsafePointer(to:_:)](https://developer.apple.com/reference/swift/2431879-withunsafepointer)
 
-## 6. ArraySlice的用途
+ArraySlice的用途
+----------
 
 `Swift`提供了`ArraySlice`来执行数组的切片操作。类似于其它语言中的切片(如Python)，`ArraySlice`对象复用了原始数组的存储结构，而不是新开辟一块内存区域来将数组片断的元素拷贝过来。因此，它能让我们快速高效地对大数组的片段执行操作。如下代码所示：
 
@@ -229,7 +235,8 @@ print(result)       // 79800
 
 1. [ArraySlice](https://developer.apple.com/reference/swift/arrayslice)
 
-## 7. ArraySlice使用注意事项
+ArraySlice使用注意事项
+----------
 
 使用`ArraySlice`时，需要注意两点：
 
@@ -289,7 +296,8 @@ slice[slice.endIndex - 1]       // 299
 
 1. [ArraySlice](https://developer.apple.com/reference/swift/arrayslice)
 
-## 8. 尾调用优化
+尾调用优化
+----------
 
 尾调用是指一个函数里的最后一个动作是一个函数调用的情形：即这个调用的返回值直接被当前函数返回。我们知道在函数调用时，会在内存中生成一个调用记录，即调用帧(`call frame`)，用于保存调用位置和内部变量等信息。而尾调用由于是函数的最后一步操作，所以可以不在调用栈上添加一个新的调用帧，而是直接更新外层函数的调用帧，这种处理方式即尾调用优化(`Tail Call Optimization, TCO`)。
 
@@ -303,7 +311,8 @@ slice[slice.endIndex - 1]       // 299
 2. [Functional Swift: Tail Recursion Explained](https://www.natashatherobot.com/functional-swift-tail-recursion/)
 3. [尾调用](https://zh.wikipedia.org/wiki/%E5%B0%BE%E8%B0%83%E7%94%A8)
 
-## 9. 多维下标
+多维下标
+----------
 
 我们通常看到的下标操作都是一维的，不过如果有需要，我们可以定义多维的下标操作，如下代码所示：
 
@@ -351,7 +360,8 @@ print(vectors[0, 0, 0])            // nil
 print(vectors[3, 4, 6])            // Optional(__lldb_expr_167.Vector3D<Swift.Int>(x: 3, y: 4, z: 6))
 ```
 
-## 10. Swift中打印线程调用栈
+Swift中打印线程调用栈
+----------
 
 在`Swift 3`中，如果想打印线程的调用栈，可以简单的使用`Thread.callStackSymbols`，如下代码所示：
 
@@ -391,7 +401,8 @@ if let symbols = backtrace_symbols(&callstack, frames) {
 
 1. [how to call backtrace_symbols() in swift](http://stackoverflow.com/questions/40801545/how-to-call-backtrace-symbols-in-swift)
 
-## 11. Swift RawRepresentable
+Swift RawRepresentable
+----------
 
 `Swift`编译器自动为带有`raw type`的`enum`添加了`RawRepresentable`协议的实现。`RawRepresentable`协议的定义如代码清单11-1-1所示，它可以为某个类型定义一个关联的`raw value`，并在两者之间切换。如下代码所示是一个典型的带`raw value`的枚举。
 
@@ -428,7 +439,8 @@ for i in 3...6 {
 1. [RawRepresentable](https://developer.apple.com/reference/swift/rawrepresentable)
 
 
-## 12. Swift在扩展中重写父类方法
+Swift在扩展中重写父类方法
+----------
 
 `Swift`在类的`extension`中，如果想重写父类的方法，会有以下两个限制(不局限于这两个，可能还有其它)：
 
@@ -437,7 +449,8 @@ for i in 3...6 {
 
 当然参数和返回值的类型如果是`String`、`Array`、`Dictionary`、`Set`这些也是OK的。
 
-## 13. Swift中操作符优先级
+Swift中操作符优先级
+----------
 
 `Swift 3`中改进了操作符的优先级及结合性的声明方式。
 
@@ -514,7 +527,8 @@ precedencegroup BitwiseShiftPrecedence {
 
 1. [Improved operator declarations](https://github.com/apple/swift-evolution/blob/master/proposals/0077-operator-precedence.md)
 
-## 14. Never类型
+Never类型
+----------
 
 之前有一条知识小集讲了可以用 `@noreturn` 用来修饰函数，以告诉编译器函数永远不返回值给调用方。如下代码是原来的`fatalError`的声明。
 
@@ -559,7 +573,8 @@ public enum Never {
 
 1. [Remove @noreturn attribute and introduce an empty Never type](https://github.com/apple/swift-evolution/blob/master/proposals/0102-noreturn-bottom-type.md)
 
-## 15. Uninhabited Types
+Uninhabited Types
+----------
 
 `Never`是一个空枚举，即没有有效的`case`。所以它是一种`uninhabited type`，即明显没有值的类型。`Swift`中，以下两种情况可以看成是`uninhabited type`：
 
@@ -574,7 +589,8 @@ public enum Never {
 
 1. [Remove @noreturn attribute and introduce an empty Never type](https://github.com/apple/swift-evolution/blob/master/proposals/0102-noreturn-bottom-type.md)
 
-## 16. Repeated结构体
+Repeated结构体
+----------
 
 `Swift`提供了一个`Repeated`结构体，用于表示一个所有元素都相同的集合。我们可以使用`repeatElement(_:count:)`函数来创建`Repeated`集合，如下代码所示：
 
@@ -592,7 +608,8 @@ for name in repeatedName {
 // test
 ```
 
-## 17. @autoclosure
+@autoclosure
+----------
 
 `Swift`中的`@autoclosure`还是一个很有意思的属性，它用于修饰函数中的闭包类型的参数，它主要有两个作用：
 
@@ -625,7 +642,8 @@ serve2(curstomer: customersInLine.remove(at: 0))
 
 1. [The Swift Programming Language (Swift 4) -- Closures](https://developer.apple.com/library/prerelease/content/documentation/Swift/Conceptual/Swift_Programming_Language/Closures.html#//apple_ref/doc/uid/TP40014097-CH11-ID543 https://developer.apple.com/swift/blog/?id=4)
 
-## 18. Autolayout Theory
+Autolayout Theory
+----------
 
 `View hierarchy`的`layout`可以定义为一系列的线性方程式。每个约束都表示一个方程式，大部分约束定义的是两个视图之间的关系，当然也可以是一个视图的两个不同的属性之间的关系，如高宽比。
 
@@ -641,7 +659,8 @@ serve2(curstomer: customersInLine.remove(at: 0))
 
 1. [Auto Layout Guide](https://developer.apple.com/library/content/documentation/UserExperience/Conceptual/AutolayoutPG/AnatomyofaConstraint.html#//apple_ref/doc/uid/TP40010853-CH9-SW1)
 
-## 19. Swift Compile Warning
+Swift Compile Warning
+----------
 
 在`Swift`中，我们通常会用`FIXME/TODO/MARK`来做一些注释标注，这些标注在代码的`dropdown box`中能显示出来，如下图所示：
 
@@ -664,7 +683,8 @@ serve2(curstomer: customersInLine.remove(at: 0))
 1. [HOW TO HIGHLIGHT YOUR TODOS, FIXMES, & ERRORS IN XCODE](https://krakendev.io/blog/generating-warnings-in-xcode)
 
 
-## 20. iOS动画在系统中处理的2个阶段
+iOS动画在系统中处理的2个阶段
+----------
 
 接上一条。打包的`layer`和动画发送到`render server`后，会被反序列化成`render tree`。`Render server`将对动画的每一帧执行以下两步操作：
 
@@ -673,7 +693,8 @@ serve2(curstomer: customersInLine.remove(at: 0))
 
 这两步操作在动画期间不断重复。第一步操作由`CPU`来完成，第二步操作`GPU`来完成。两步操作都是由系统控制。
 
-## 21. iOS动画应用内处理的4个阶段
+iOS动画应用内处理的4个阶段
+----------
 
 在iOS中，动画的执行主要分6个阶段，其中4个阶段是在应用内部处理的：
 
@@ -685,7 +706,8 @@ serve2(curstomer: customersInLine.remove(at: 0))
 这几个阶段都是由CPU来处理的，而且我们只能控制前面两个阶段，后两个阶段将由`Core Animation`来控制。
 
 
-## 22. 导致layer绘制的性能问题
+导致layer绘制的性能问题
+----------
 
 `CALayer`的大部分属性都是通过`GPU`来绘制的。以下几类操作可能导致`layer`绘制的性能问题：
 
