--- a/2017/09.md
+++ b/2017/09.md
@@ -1,6 +1,7 @@
 # 2017.09
 
-## 1. WKWebView检测首屏渲染时间
+WKWebView检测首屏渲染时间
+----------
 
 **作者**: [bestswifter](https://weibo.com/bestswifter)
 
@@ -16,13 +17,15 @@
 }
 ```
 
-## 2. iOS 11 中 applicationDidEnterBackground:延迟执行
+iOS 11中applicationDidEnterBackground:延迟执行
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
 App 进入后台后, `applicationDidEnterBackground:`这个方法将延迟大约 1000 毫秒执行, 那么如果在进入后台时做一些任务，可能会达不到预期的效果。如果 App 刚进入应用立即启动，`applicationDidEnterBackground:` 和 `applicationWillEnterForeground:` 这两个方法都不会调用。如果有这么一个场景，进入后台后给应用设置手势密码，当 App 刚进入后就立即启动，那么 `applicationDidEnterBackground`：这个方法不会立即执行，从而手势密码也就不会设置。
 
-## 3. JSManagedValue对底层Javascript值的引用
+JSManagedValue对底层Javascript值的引用
+----------
 
 使用`JSManagedValue`保存值时，需要注意其底层的`Javascript`值的使用。
 
@@ -53,7 +56,8 @@ appApi.setMenu([{
 
 1. [JSManagedValue Reference](https://developer.apple.com/documentation/javascriptcore/jsmanagedvalue)
 
-## 4. iOS 11中的New Color Set
+iOS 11中的New Color Set
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -125,7 +129,8 @@ static NSString* const k10AEFFColor = @"10AEFF";
 }
 ```
 
-## 5. UITextFile和UITextView的textContentType属性新类型
+UITextFile和UITextView的textContentType属性新类型
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -138,7 +143,8 @@ _textField.textContentType = UITextContentTypePassword;
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-09-22-1-1.jpg?raw=true)
 
-## 6. 自动记住键盘类型
+自动记住键盘类型
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -151,20 +157,22 @@ _textField.textContentType = UITextContentTypePassword;
 }
 ```
 
-## 7. iPhone X屏幕基本信息
+iPhone X屏幕基本信息
+----------
 
 适配iPhone X时，需要了解一些屏幕的基本信息：
 
-1. iPhone X是真正的3x设备，1个point代表屏幕上的***3×3***个像素；而iPhone 7 plus 大概是***2.88×2.88***个像素；
-2. iPhone X屏幕大小是***375×812***个点 (***1125×2436***像素)；
-3. iPhone X屏幕的长宽比大约是***9:19.5***，iPhone 5~8的长宽比都是***9:16***；不过iPhone X与iPhone 6/6s/7/8的屏幕宽度是一样的；
+1. iPhone X是真正的3x设备，1个point代表屏幕上的**3×3**个像素；而iPhone 7 plus 大概是***2.88×2.88***个像素；
+2. iPhone X屏幕大小是**375×812**个点 (***1125×2436***像素)；
+3. iPhone X屏幕的长宽比大约是**9:19.5**，iPhone 5~8的长宽比都是***9:16***；不过iPhone X与iPhone 6/6s/7/8的屏幕宽度是一样的；
 4. 大刘海，这应该是最直观的，导致状态栏被分割在刘海两侧
 
 参考
 
 1. [How iOS Apps Adapt to the iPhone X Screen Size](https://medium.com/@hacknicity/how-ios-apps-adapt-to-the-iphone-x-screen-size-a00bd109bbb9)
 
-## 8. Xcode 9 支持开启多个模拟器
+Xcode 9支持开启多个模拟器
+----------
 
 `Xcode 9`开始可以同时开启多个模拟器了。这样我们就可以同时看不同模拟器下App的显示效果。
 
@@ -183,7 +191,8 @@ _textField.textContentType = UITextContentTypePassword;
 1. [What’s New in Xcode](https://developer.apple.com/library/content/documentation/DeveloperTools/Conceptual/WhatsNewXcode/xcode_9/xcode_9.html)
 2. [What’s New in Xcode 9: Top 5 features to look forward to.](https://medium.com/@guydaher/whats-new-in-xcode-9-top-5-features-to-look-forward-to-c2e64868270b)
 
-## 9. 使用Xcode自带的运行时工具发现代码中的漏洞
+使用Xcode自带的运行时工具发现代码中的漏洞
+----------
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -239,7 +248,8 @@ for (int i = 0; i < 10; i++) {
 Variable 'value' is used uninitialized whenever 'if' condition is false
 ```
 
-## 10. -warn-long-expression-type-checking标识
+-warn-long-expression-type-checking标识
+----------
 
 Swift的类型检测(`type-checker`)是编译时的一个性能瓶颈。
 
@@ -261,7 +271,8 @@ Swift的类型检测(`type-checker`)是编译时的一个性能瓶颈。
 
 1. [Measuring Swift compile times in Xcode 9](https://www.jessesquires.com/blog/measuring-compile-times-xcode9/)
 
-## 11. 查看Swift函数/方法编译时间
+查看Swift函数/方法编译时间
+----------
 
 我们可以使用`-debug-time-function-bodies`标识来查看Swift中每个函数/方法的编译时间。添加方式与`-warn-long-expression-type-checking`一样，在`Other Swift Flags`添加中`-Xfrontend -debug-time-function-bodies`。
 
@@ -282,7 +293,8 @@ Swift的类型检测(`type-checker`)是编译时的一个性能瓶颈。
 1. [Profiling your Swift compilation times](http://irace.me/swift-profiling)
 
 
-## 12. Xcode 9全屏模式下与模拟器分屏
+Xcode 9全屏模式下与模拟器分屏
+----------
 
 在`Xcode 9`之前，如果`Xcode`是全屏模式，那么使用模拟器时会有些不方便，看效果时需要切换屏幕（壕的话可以用双屏幕）。在`Xcode 9`中，添加了一个新功能，即在全屏模式下，可以和模拟器在同一屏幕上分屏操作，如下图所示。
 
