--- a/2017/01.md
+++ b/2017/01.md
@@ -334,7 +334,7 @@ class HandlerCaller: NSObject {
 1. [Make non-escaping closures the default](https://github.com/apple/swift-evolution/blob/master/proposals/0103-make-noescape-default.md)
 2. [Add @noescape to public library API](https://github.com/apple/swift-evolution/blob/master/proposals/0012-add-noescape-to-public-library-api.md)
 
-Swift中的escaping closure
+Swift中的escaping-closure
 ----------
 
 在Swift中使用`@escaping`来修饰一个逃逸闭包(`Escaping Closures`)，即闭包作为参数传到一个函数中时，这个闭包可以不在函数中调用，而在函数返回之后的某个时间再调用。如可以在函数中将闭包赋值给一个类的成员变量，或者保存在一个数组中，以备后续异步调用。这类闭包参数需要使用`@escaping`来修饰，否则会报错，如下代码所示：
@@ -617,7 +617,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 1. [Clang 5 documentation](http://clang.llvm.org/docs/AttributeReference.html#objc-runtime-name)
 2. [Clang Attributes 黑魔法小记](http://blog.sunnyxx.com/2016/05/14/clang-attributes/)
 
-Tagged Pointer
+Tagged-Pointer
 ----------
 
 苹果在64位ARM架构下，对`NSNumber`等小对象对象的存储做了优化，即使用`Tagged Pointer`技术。通过使用这种技术，`NSNumber`指针变量指向的值不再是单独存储在一块内存中，而是对指针本身做了特殊处理，如下图代码所示。
@@ -637,7 +637,7 @@ Tagged Pointer
 1. [深入理解Tagged Pointer](http://www.infoq.com/cn/articles/deep-understanding-of-tagged-pointer)
 2. [WWDC 2013 Advanced in Objective-C](https://developer.apple.com/videos/play/wwdc2013/404/)
 
-Extension Selector
+Extension-Selector
 ----------
 
 在`Swift`中，我们可以使用`#selector`设置`target-action`模式中的`action`操作，如下代码所示：
@@ -710,7 +710,7 @@ compare(number1: 10, number2: 20) {
 }
 ```
 
-Swift 3的#keyPath
+Swift3的#keyPath
 ----------
 
 在`Objective-C/Swift`中使用`KVC`或`KVO`总是需要格外小心，因为对于`key`或`keyPath`，我们使用的是字符串字面量来处理。这样在编译期无法检测我们的输入是否正确，或许我们会因为一时大意，多写了或少写了一个字符，或拼错了单词。而这个错误只能在运行时，程序崩溃时才能发现，很不爽的吧。
@@ -737,7 +737,7 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 
 1. [Referencing Objective-C key-paths](https://github.com/apple/swift-evolution/blob/master/proposals/0062-objc-keypaths.md)
 
-Swift 3移除var关键字
+Swift3移除var关键字
 ----------
 
 `Swift 3`中移除了函数参数中的`var`关键字，[swift proposals SE-0003](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)中的观点是`var`标记的参数只是本地复本会变化，不会回传给原始值，因此调用者并不会知道参数值的改变，实际上没有太大的实用性。
@@ -752,7 +752,7 @@ Swift 3移除var关键字
 
 1. [Removing var from Function Parameters](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)
 
-Swift 3中的AnyHashable
+Swift3中的AnyHashable
 ----------
 
 在`Swift 3`的标准库中添加了`AnyHashable`这一新类型，其用途是在需要`Hash`值的集合中，可以混合使用多种`Hashable`类型。例如，字典的`key`值，其要求是`Hashable`类型，如果希望`key`值是任意实现了`Hashable`协议的类型，则在声明字典时，可以使用`AnyHashable`作为`key`的类型，如下代码所示：
