--- a/2017/11.md
+++ b/2017/11.md
@@ -78,12 +78,16 @@ function saveFile() {
 
 Shell 脚本在 iOS 中的应用
 ----------
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/3-1.jpg?raw=true)
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/3-1.PNG?raw=true)
+
 使用 Pod 的同学经常会遇到 `"error: The sandbox is not in sync with the Podfile.lock. Run 'pod install' or update your CocoaPods installation."` 错误，其实是 `[CP] Check Pods Manifest.lock` 这个脚本所起的作用。
 
 Pod 中有 Manifest.lock 和 Podfile.lock 这两个文件，只要这两个文件的内容不一样就会报错上面这个错误。Podfile.lock 是大家共用的文件（用来保证我们每个人的Pod库版本一样），而Manifest.lock是本地的文件（自己用）。图中这个脚本正是做这样的事情。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/3-2.jpg?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/3-2.PNG?raw=true)
 
 **解释下这个脚本：**    
 shell 脚本总是以：#!/bin/bash 或者 #!/bin/sh 开头，它主要告诉系统执行这个文件需要那个解释器，进入 /bin 目录下可以看到 bash 和 sh 解释器；
@@ -112,24 +116,35 @@ fi
 
 RxSwift 总结
 ----------
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
 ReactiveX（Reactive Extensions）是通过可观察的流实现异步编程的一种API，它结合了观察者模式、迭代器模式和函数式编程的精华。RxSwift是ReactiveX编程思想的一种实现，几乎每一种语言都会有那么一个Rx[xxxx]框架，比如 RxJava，RxJS 等。Rx 可以概括为，对某些数据流（很广，可以是一些事件等）进行处理，使其变成可观察对象（Observable）序列，这样观察者（observer）就可以订阅这些序列【观察者模式】。然而对于订阅者来说（observer）某些选项（items）并不是自己需要的（需要过滤），某些选项（items）需要转换才能达到自己的目的【操作符 filter, map 等】。为了提升用户体验，或其它目的，有些操作需要放到特定的线程去执行，比如 UI 操作需要放到主线程，这就涉及到了调度器【调度器 Scheduler】。所以Rx可以这样概括，Rx = Observables + LINQ + Schedulers，其中 LINQ（Language Integrated Query）语言集成查询，比如那些操作符号。
 
 图1是 RxSwift 的简单的应用，从数组中找出 Lefe_x 并显示到 Label 上。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/4-1.jpg?raw=true)
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/4-2.jpg?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/4-1.JPG?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/4-2.JPG?raw=true)
 
-iOS10之后多变形绘制
+iOS10之后多边形绘制
 ----------
-众所周知，对于一些多边形的绘制，我们可以使用 CAShapeLayer 配合 UIBezierPath，然后再用这个 layer 给 View 做 mask 即可。但是一种情况是不行的，对于 UIVisualEffectView，iOS10 之前 self.blurView.layer.mask = someShapeLayer 这一句是 ok 的，但是 iOS10 之后，这样设将无效，而应该使用 self.blurView.maskView = maskView。具体代码如图，解释可参考: 
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/5-1.jpg?raw=true)
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+众所周知，对于一些多边形的绘制，我们可以使用 CAShapeLayer 配合 UIBezierPath，然后再用这个 layer 给 View 做 mask 即可。但是一种情况是不行的，对于 UIVisualEffectView，iOS10 之前 `self.blurView.layer.mask = someShapeLayer` 这一句是 ok 的，但是 iOS10 之后，这样设将无效，而应该使用 `self.blurView.maskView = maskView。`具体代码如图，[解释可参考](https://forums.developer.apple.com/thread/50854)
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/5-1.JPG?raw=true)
 
 
 通过导入 DSYM 使用 Instruments 做性能分析
 ----------
-通常情况下，使用 Instruments 做性能分析，看调用栈时，是能够直接看到对应方法调用堆栈的，而不是一串的地址，但这个前提是 Xcode 用编译过这个应用。如果是用同事或者打包服务器上的安装包做性能分析时，就无法看到对应的方法调用堆栈信息了，只能看到一串地址。这个时候可以通过导入 dSYM 的方式来查看对应的方法调用堆栈，方式如下（见图1）：打开 Instruments--> 运行一遍你的应用-->停止-->File-->Symbols-->dSYM Path 【Locate】即可。但是有些时候可能应用中包含 extension，则直接 locate 会提示无法定位到 dSYM 文件【The specified path didn't locate a dSYM for any of the selected libraries.】这个时候需要把你的 dSYM.zip 解压，右键显示其内容将对应的 .app.dSYM 拷出，然后 locate 到这个拷出的 dSYM 文件即可或者按照图2操作也是可行的。具体流程见图2
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-1.jpg?raw=true)
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-1.jpg?raw=true)
+通常情况下，使用 Instruments 做性能分析，看调用栈时，是能够直接看到对应方法调用堆栈的，而不是一串的地址，但这个前提是 Xcode 用编译过这个应用。如果是用同事或者打包服务器上的安装包做性能分析时，就无法看到对应的方法调用堆栈信息了，只能看到一串地址。这个时候可以通过导入 dSYM 的方式来查看对应的方法调用堆栈，方式如下（见图）：打开 Instruments--> 运行一遍你的应用-->停止-->File-->Symbols-->dSYM Path 【Locate】即可。
+
+![图一](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-1.JPG?raw=true)
+
+但是有些时候可能应用中包含 extension，则直接 locate 会提示无法定位到 dSYM 文件【The specified path didn't locate a dSYM for any of the selected libraries.】这个时候需要把你的 dSYM.zip 解压，右键显示其内容将对应的 .app.dSYM 拷出，然后 locate 到这个拷出的 dSYM 文件即可或者按照图2操作也是可行的。具体流程见图：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-2.GIF?raw=true)
